from enum import Enum

class WakeTurbulenceCategoryEnum(Enum):
    J = "J"
    H = "H"
    M = "M"
    L = "L"