@startuml class

enum WakeTurbulenceCategoryEnum {
    LIGHT
    MEDIUM
    HEAVY
}

class Aircraft {
    - id: int
    - aircraft_identification: str
    - aircraft_type: str
    - wake_turbulence_category: WakeTurbulenceCategoryEnum
    - equipment: str
    - endurance: Time
    - passenger_capacity: str
    - crew_capacity: int
    - max_speed: str
    - aircraft_colour_and_marking: str
}

class FlightPlan {
    - id: int
    - submission_date: datetime
    - priority: str
    - pilot_id: int
    - aircraft_id: int
    - departure_aerodrome_id: int
    - destination_aerodrome_id: int
    - first_alternative_aerodrome_id: int
    - second_alternative_aerodrome_id: int
    - departure_date: date
    - departure_time: str
    - total_estimated_elapsed_time: str
    - cruising_speed: str
    - persons_on_board: int
}

class EmergencyEquipmentData {
    - id: int
    - dinghies: int
    - capacity: int
    - cover: bool
    - color: str
    - aircraft_emergency_radio: str
    - survival_equipment: str
    - jackets: str
}

class Pilot {
    - id: int
    - license_number: str
}

class Airport {
    - id: int
    - code: str
}

FlightPlan "1" --> "1" Aircraft
FlightPlan "1" --> "1" Pilot
FlightPlan "1" --> "1" EmergencyEquipmentData
FlightPlan "1" --> "4" Airport: departure/destination/alternatives
Aircraft "1" --> "1" WakeTurbulenceCategoryEnum

@enduml